<resources>
    <string name="app_name" translatable="false">RealityLeap_RosSeti</string>
    <string name="inspection_tasks">Inspection tasks</string>
    <string name="start_task">Start task</string>
    <string name="show_location_btn_label">Location</string>
    <string name="place_name_label">Place name:</string>
    <string name="creator_name_label">Task creator:</string>
    <string name="safety_event_label">Required technical measures:</string>
    <string name="inspection_task">Inspection task</string>
    <string name="need_arrive_message">You need to arrive at object to start inspection</string>
    <string name="defects">Defects</string>
    <string name="add_defect">Add defect</string>
    <string name="search_defects">Search defects</string>
    <string name="defect_location">Location</string>
    <string name="defect_equip_type">Equipment type</string>
    <string name="defect_text_desc">Description</string>
    <string name="defect_photos_label">Photos</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="take_task">Take task</string>
    <string name="take_task_notify">You take task. Press \"Start inspect\" when you will arrive at place</string>
    <string name="finish_inspect">Finish inspect</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="finish_inspect_confirm">Finish inspect?</string>
    <string name="show_report">Show report</string>
</resources>